# hopbox-core

./: AGENTS.md  CLAUDE.md  Cargo.toml  bootstrap.md
src/: config.rs  error.rs  lib.rs
src/ai/: mod.rs
src/protocol/: mod.rs
src/pty/: mod.rs
