[package]
name = "hopbox-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "hopbox core library — AI backends, session protocol, PTY abstraction"
repository = "https://github.com/ConflictHQ/hopbox-core"

[dependencies]
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
